Test pipeline, remove pom configuration