@@ -230,9 +230,6 @@
 
     <!-- Set this to an empty value to enable the compiler to fail on usage of deprecated APIs. -->
     <compiler.failondeprecatedstatus>-</compiler.failondeprecatedstatus>
-
-    <!-- Used by Java 18 and later to allow the security manager to be set while testing and linting. -->
-    <java.security.manager.configuration></java.security.manager.configuration>
   </properties>
 
   <build>
@@ -571,7 +568,7 @@
           <version>3.10.1</version> <!-- {x-version-update;org.apache.maven.plugins:maven-compiler-plugin;external_dependency} -->
           <configuration>
             <showWarnings>true</showWarnings>
-            <failOnWarning>false</failOnWarning>
+            <failOnWarning>true</failOnWarning>
             <skipMain>${skipCompile}</skipMain>
             <skip>${skipTestCompile}</skip>
             <compilerArgs combine.children="append" combine.self="append">
@@ -652,12 +649,6 @@
               <artifactId>spotbugs</artifactId>
               <version>4.2.2</version> <!-- {x-version-update;com.github.spotbugs:spotbugs;external_dependency} -->
             </dependency>
-            <!-- Needed as the version of Spotbugs being used isn't compatible is Java 18+ without this. -->
-            <dependency>
-              <groupId>org.ow2.asm</groupId>
-              <artifactId>asm</artifactId>
-              <version>9.3</version> <!-- {x-version-update;org.ow2.asm:asm;external_dependency} -->
-            </dependency>
           </dependencies>
           <configuration>
             <skip>${spotbugs.skip}</skip>
@@ -670,9 +661,6 @@
             <failOnError>${spotbugs.failOnError}</failOnError>
             <!-- Set this to true when src/samples and src/test are spotbugs clean in all Track 2 SDKs -->
             <includeTests>${spotbugs.includeTests}</includeTests>
-            <jvmArgs>
-              ${java.security.manager.configuration}
-            </jvmArgs>
 
             <!-- Enable this plugin when issues documented are fixed -->
             <!--          <plugins>-->
@@ -1176,7 +1164,6 @@
                 <!-- In later versions of Java, java.base doesn't open java.lang.invoke to azure-core, so it needs to be done with this directive. This only affects tests. -->
                 --add-opens java.base/java.lang.invoke=com.azure.core
                 ${additionalFailsafeArgLine}
-                ${java.security.manager.configuration}
               </argLine>
             </configuration>
           </plugin>
@@ -1618,17 +1605,6 @@
           </plugin>
         </plugins>
       </build>
-    </profile>
-
-    <profile>
-      <id>java-18-plus-allow-securitymanager</id>
-      <activation>
-        <jdk>[18,)</jdk>
-      </activation>
-
-      <properties>
-        <java.security.manager.configuration>-Djava.security.manager=allow</java.security.manager.configuration>
-      </properties>
     </profile>
   </profiles>
 </project>
